@@ -1,0 +1,5 @@
+# GST Project
+
+This project is a PHP-based quoting system. To add product images used on the optimization page, an optional `image_path` field is available on the `products` table. Uploaded files are stored in `uploads/products/`.
+
+See `image_upload_example.php` for a minimal example of handling an image upload and saving the file path to the database.
