@@ -138,11 +138,12 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
 
     $total_cost = 0;
     foreach ($results as &$row) {
-        $stmt = $pdo->prepare('SELECT unit, measure_value, unit_price, category FROM products WHERE name = ? LIMIT 1');
+        $stmt = $pdo->prepare('SELECT unit, measure_value, unit_price, category, image_path FROM products WHERE name = ? LIMIT 1');
         $stmt->execute([$row['name']]);
         $product = $stmt->fetch();
         $row['cost'] = null;
         $row['category'] = $nameCategoryMap[$row['name']] ?? ($product['category'] ?? 'Diğer');
+        $row['image_path'] = $product['image_path'] ?? null;
         if ($product) {
             $count = is_numeric($row['count']) ? (float) $row['count'] : 0;
             $length = is_numeric($row['length']) ? (float) $row['length'] : 0;
@@ -267,7 +268,12 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
                 <tbody>
                     <?php foreach ($groupedResults['Alüminyum'] ?? [] as $row): ?>
                         <tr>
-                            <th><?php echo htmlspecialchars($row['name']); ?></th>
+                            <th>
+                                <?php if (!empty($row['image_path'])): ?>
+                                    <img src="<?php echo htmlspecialchars($row['image_path']); ?>" alt="" style="max-width:40px" class="me-2">
+                                <?php endif; ?>
+                                <?php echo htmlspecialchars($row['name']); ?>
+                            </th>
                             <td>
                                 <?php
                                 echo is_numeric($row['length'])
@@ -305,7 +311,12 @@ if ($_SERVER['REQUEST_METHOD'] === 'POST') {
                         <?php if (!empty($groupedResults[$cat])): ?>
                             <?php foreach ($groupedResults[$cat] as $row): ?>
                                 <tr>
-                                    <th><?php echo htmlspecialchars($row['name']); ?></th>
+                                    <th>
+                                        <?php if (!empty($row['image_path'])): ?>
+                                            <img src="<?php echo htmlspecialchars($row['image_path']); ?>" alt="" style="max-width:40px" class="me-2">
+                                        <?php endif; ?>
+                                        <?php echo htmlspecialchars($row['name']); ?>
+                                    </th>
                                     <td>
                                         <?php
                                         echo is_numeric($row['length'])
