@@ -1,3 +1,4 @@
+- Added optional image_path column to products and example upload script.
 - Reformatted admin.php according to PSR-12 guidelines and added comments.
 - Added CSRF token generation and session-based caching for dashboard stats.
 - Converted raw SQL queries in admin.php to prepared statements.
